<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.helloandroid.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/udacity_img"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/better_together"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="#B302b3e4"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="5dp" />


    </RelativeLayout>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/udacity_logo"
        android:contentDescription="@string/logo_description"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#B302b3e4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image_home_description"
            android:src="@drawable/address_icon"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/address" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image_phone_description"
            android:src="@drawable/phone_icon"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:text="@string/phone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingLeft="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/image_web_description"
            android:src="@drawable/web_icon"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:text="@string/web"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:autoLink="web"
            android:gravity="center_vertical"
            android:textColorLink="#000000"/>
    </LinearLayout>

</LinearLayout>

